merge 4.5 into trunk
look out below

git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@19212 219f1c6e-4a0e-43c8-96f2-6e749be13fd4